k8s/template/ingress/myapp-v1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1-deploy
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      name: myapp-v1-template
      labels:
        app: myapp
        version: v1
    spec:
      containers:
        - name: myapp-v1-container
          image: registry.cn-hangzhou.aliyuncs.com/zhoubo56/myapp:v1
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: ali-zhoubo
