k8s/template/ingress/myapp-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2-deploy
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      name: myapp-v2-template
      labels:
        app: myapp
        version: v2
    spec:
      containers:
        - name: myapp-v2-container
          image: registry.cn-hangzhou.aliyuncs.com/zhoubo56/myapp:v2
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: ali-zhoubo
