k8s/template/ingress/myapp-v1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v1-svc
  namespace: default
  labels:
    app: myapp
    version: v1
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: myapp
    version: v1
  type: ClusterIP
