k8s/template/ingress/myapp-v2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v2-svc
  namespace: default
  labels:
    app: myapp
    version: v2
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: myapp
    version: v2
  type: ClusterIP
