k8s/template/ingress/myapp-v1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-v1
spec:
  rules:
    - host: v1.zhoubo.com
      http:
        paths:
        - path: /
          backend:
            serviceName: myapp-v1-svc
            servicePort: 80
