k8s/template/ingress/myapp-v2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-v2
spec:
  rules:
    - host: v2.zhoubo.com
      http:
        paths:
        - path: /
          backend:
            serviceName: myapp-v2-svc
            servicePort: 80
