k8s/template/ingress/rewrite-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: https://v2.zhoubo.com:32603/
  name: rewrite
spec:
  rules:
    - host: re.zhoubo.com
      http:
        paths:
        - path: /
          backend:
            serviceName: myapp-v1-svc
            servicePort: 80
